# hadouken

./: .gitattributes  .gitignore  .gitmodules  .semver  .travis.yml  Build.bat  CMakeLists.txt  CONTRIBUTING.md  Changelog  Gemfile  Hadouken.SDK.nuspec  Hadouken.msbuild  Hadouken.nunit  Hadouken.nuspec  Hadouken.sln  LICENSE  LICENSE.rtf  README.md  Rakefile  ReleaseNotes.md  appveyor.yml  build.bat  build.config.template.ps1  build.fsx  build.github.ps1  build.ps1  build.utils.ps1  hadouken.sln  nuget.config  packages.config  run-build.ps1
.nuget/: NuGet.targets  packages.config
config/: config-sample.yml
docs/: Makefile  conf.py  index.md  index.rst  make.bat
docs/extending/: jsonrpcmethods.md
docs/source/: conf.py  index.rst
docs/src/: conf.py  configuration.rst  for-developers.rst  getting-started.rst  index.rst  jsonrpc.rst  migrating.rst
extensions/autoadd/: CMakeLists.txt  autoaddextension.cpp  autoaddextension.hpp  folder.hpp  manifest.cpp
extensions/automove/: CMakeLists.txt  automoveextension.cpp  automoveextension.hpp  filter.hpp  manifest.cpp  patternfilter.cpp  patternfilter.hpp  rule.hpp  tagsfilter.cpp  tagsfilter.hpp
extensions/jsengine/: CMakeLists.txt  jsengineextension.cpp  jsengineextension.hpp  manifest.cpp  mod_bittorrent.cpp  mod_bittorrent.hpp  mod_config.cpp  mod_config.hpp  mod_fs.cpp  mod_fs.hpp  timer.cpp  timer.hpp
extensions/jsengine/modules/: bittorrent.cpp  bittorrent.hpp  config.cpp  config.hpp  fs.cpp  fs.hpp
extensions/launcher/: CMakeLists.txt  launcherextension.cpp  launcherextension.hpp  manifest.cpp
extensions/pushbullet/: CMakeLists.txt  manifest.cpp  pushbulletextension.cpp  pushbulletextension.hpp
extensions/pushover/: CMakeLists.txt  manifest.cpp  pushoverextension.cpp  pushoverextension.hpp
include/Hadouken/: Config.hpp  Platform.hpp  Version.hpp
include/hadouken/: application.hpp  config.hpp  logger.hpp  logging.hpp  platform.hpp  plugin.hpp  plugin_manager.hpp  service_locator.hpp  version.hpp
js/: auth.js  bittorrent.js  config.js  core.js  events.js  hadouken.js  metadata.js  plugins.js  rpc.js  rss.js  timer.js
js/plugins/: autoadd.js  autolabel.js  automove.js  launcher.js  printer.js  pushbullet.js  pushover.js
js/rpc/: config_get.js  core_getSystemInfo.js  misc_getTags.js  rss_getFeedItems.js  rss_getFeeds.js  session_addTorrentFile.js  session_addTorrentUri.js  session_getStatus.js  session_getTorrents.js  session_pause.js  session_removeTorrent.js  session_resume.js  torrent_clearError.js  torrent_forceRecheck.js  torrent_getFiles.js  torrent_getMetadata.js  torrent_getPeers.js  torrent_getPreferences.js  torrent_getTrackers.js  torrent_moveStorage.js  torrent_pause.js  torrent_queueBottom.js  torrent_queueDown.js  torrent_queueTop.js  torrent_queueUp.js  torrent_renameFile.js  torrent_resume.js  torrent_setMetadata.js  torrent_setPreferences.js  webui_addTorrent.js  webui_getFiles.js  webui_getPeers.js  webui_getProperties.js  webui_getSettings.js  webui_list.js  webui_listDirectories.js  webui_perform.js  webui_setFilePriority.js  webui_setProperties.js  webui_setSettings.js
linux/: bootstrap.sh  build.sh  install-boost.sh  install-libtorrent.sh
plugins/auto_move/: CMakeLists.txt  auto_move.cpp  auto_move.hpp  auto_move.vcxproj  auto_move.vcxproj.filters
plugins/folder_watcher/: CMakeLists.txt  folder_watcher.cpp  folder_watcher.hpp  folder_watcher.vcxproj  folder_watcher.vcxproj.filters
src/: application.cpp  bt_session.cpp  bt_torrent_handle.cpp  console_host.cpp  console_host.hpp  hadouken.vcxproj  hadouken.vcxproj.filters  host.hpp  logger.cpp  main.cpp  platform_osx.cpp  platform_osx.mm  platform_unix.cpp  platform_win32.cpp  plugin_manager.cpp  plugin_manager.hpp  service_host.cpp  service_host.hpp  service_locator.cpp  torrent_engine.cpp  torrent_engine.hpp  version.cpp.in
src/Chocolatey/: Hadouken.nuspec
src/Docs/: conf.py  index.rst  pysemver.py
src/Hadouken.Common/: Hadouken.Common.csproj  HadoukenEnvironment.cs  IConsole.cs  IEnvironment.cs  IHadoukenEnvironment.cs  packages.config
src/Hadouken.Common.Tests/: Hadouken.Common.Tests.csproj  packages.config
src/Hadouken.Core/: ExtensionFactory.cs  Hadouken.Core.csproj  HadoukenService.cs  IExtensionFactory.cs  IHadoukenService.cs  INotifierEngine.cs  INotifierHandler.cs  IService.cs  NotifierHandler.cs  Service.cs  packages.config
src/Hadouken.Core.Tests/: Hadouken.Core.Tests.csproj
src/Hadouken.Extensions.AutoAdd/: AutoAddPlugin.cs  FolderScanner.cs  Hadouken.Extensions.AutoAdd.csproj  IFolderScanner.cs
src/Hadouken.Extensions.AutoAdd.Tests/: Hadouken.Extensions.AutoAdd.Tests.csproj
src/Hadouken.Extensions.AutoMove/: AutoMovePlugin.cs  Hadouken.Extensions.AutoMove.csproj  ISourceValueProvider.cs  ParameterValueReplacer.cs  SourceValueProvider.cs
src/Hadouken.Extensions.AutoMove.Tests/: Hadouken.Extensions.AutoMove.Tests.csproj
src/Hadouken.Extensions.HipChat/: Hadouken.Extensions.HipChat.csproj  HipChatNotifier.cs
src/Hadouken.Extensions.HipChat.Tests/: Hadouken.Extensions.HipChat.Tests.csproj
src/Hadouken.Extensions.Kodi/: Hadouken.Extensions.Kodi.csproj  KodiNotifier.cs
src/Hadouken.Extensions.Kodi.Tests/: Hadouken.Extensions.Kodi.Tests.csproj  packages.config
src/Hadouken.Extensions.Mailer/: Hadouken.Extensions.Mailer.csproj  MailSender.cs  MailerNotifier.cs
src/Hadouken.Extensions.Pushalot/: Hadouken.Extensions.Pushalot.csproj  PushalotNotifier.cs
src/Hadouken.Extensions.Pushbullet/: Hadouken.Extensions.Pushbullet.csproj  PushbulletNotifier.cs
src/Hadouken.Extensions.Pushover/: Hadouken.Extensions.Pushover.csproj  PushoverNotifier.cs
src/Hadouken.Extensions.Rss/: FeedChecker.cs  FeedService.cs  FilterMatcher.cs  Hadouken.Extensions.Rss.csproj  IFeedService.cs  IFilterMatcher.cs  RssPlugin.cs  TorrentArguments.cs
src/Hadouken.Extensions.UpdateChecker/: Hadouken.Extensions.UpdateChecker.csproj  UpdateCheckerPlugin.cs
src/Hadouken.Localization/: Hadouken.Localization.csproj  (+2 more)
tools/: SetupLocalEnvironment.bat
win32/: build.cake  build.ps1  packages.config  prepare.ps1
(+2725 files in other folders)
